pnu-dr/tekton/tekton-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-dash
  namespace: tekton-pipelines
spec:
  ingressClassName: nginx
  rules:
    - host: tekton-dr.pnu.ac.kr
      http:
        paths:
          - backend:
              service:
                name: tekton-dashboard
                port:
                  number: 9097
            path: /
            pathType: Prefix
